One more CSS fix too much padding on projects for mobile

--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ Gunatlet grey: #78736C
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    padding: 50px;
+    padding: 25px;
     gap: 50px;
     background-color:  #C2B6AA;
 
